# static_typing_tch

./: Cargo.toml  README.md
src/: function.rs  lib.rs  structure.rs  tensor_type.rs  tensor_type_detection.rs
tests/: ui.rs
tests/failures/: invalid_add.rs  invalid_add.stderr  invalid_addmm.rs  invalid_addmm.stderr  invalid_call.rs  invalid_call.stderr  invalid_struct.rs  invalid_view.rs  invalid_view.stderr
