[package]
name = "static_typing_tch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true
path = "src/lib.rs"

[dependencies]
syn = { version="1.0", features=["full", "fold", "extra-traits"] }
# syn = { path="../syn", features=["full", "fold", "extra-traits"] }
quote = "1.0"
log = "0.4"


[dev-dependencies]
trybuild = "1"
tch = { git="https://github.com/LaurentMazare/tch-rs.git" }

[profile.test]
opt-level = 3
